@@ -197,3 +197,8 @@ unshare容器和rootless容器会始终在执行命令前fork()自身一次，
 -x, --no-network .......................: 禁用网络
 ```      
 禁用容器网络，这需要net命名空间支持，并将自动启用unshare。      
+************
+```
+-K, --use-kvm ..........................: 开启/dev/kvm支持
+```
+开启/dev/kvm支持。      
